# Fearless

./: .jqwik-database  fearless-llm-guide.txt  pom.xml
.zed/: settings.json
antlrGrammars/: Fearless.g4
artefacts/allBase/: allBase.txt
assets/base/: codegen.fear  lists.fear
assets/immRt/: FearlessMain.java  VPF.java
assets/rt/: CapTry.java  ConfigureVPF.java  FearlessMain.java  IsoPod.java  RealSystem.java  Str.java  VPF.java
compiler/: base.fear.pkg.mearless  pom.xml  test.fear.pkg.mearless
compiler/src/: module-info.java
experiments/fearless-interpreter/: Cargo.toml
experiments/fearless-interpreter/src/: ast.rs  bounded_stack.rs  dec_id.rs  interp.rs  main.rs  pretty_print.rs  rc.rs  schema_capnp.rs  state.rs
experiments/fearless-interpreter/src/jit/: lower.rs  mod.rs
experiments/fearless-interpreter/src/magic/: magic.rs  magic_meths.rs  mod.rs  nat.rs
experiments/fearless-interpreter/src/optimisations/: devirtualise_final.rs  fun_visitor.rs  inline_static_calls.rs  mod.rs
experiments/fearless-interpreter/tests/fib/: base.fear.pkg.mearless  base.txt  test.fear.pkg.mearless  test.txt
experiments/heartbeat-scheduler/: pom.xml
grammar/antlrGrammars/: Fearless.g4  FearlessNotes.g4
mearless/: .gitignore  pom.xml  schema.capnp
native-runtime/: Cargo.toml  build_all.sh
native-runtime/src/: lib.rs
resources/base/: block.fear  bools.fear  iso.fear  lists.fear  (+5 more)
src/: module-info.java
tree-sitter-fearless/: .editorconfig  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
(+240 files in other folders)
