[package]
name = "fearless-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.20.3"
mimalloc = { version = "0.1.43" }
hashbrown = {  version = "0.15.0" }
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["full"] }
blake3 = "1.5.4"
itertools = "0.13.0"
dashmap = { version = "6.1.0" }
regex = "1.11.1"

[profile.release]
lto = true
codegen-units = 1
debug = "none"
opt-level = 3
